cmake_minimum_required(VERSION 3.8)
project(main_executor)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic -fPIC)
endif()

# find dependencies<-パッケージが追加されたらここに追記
find_package(rclcpp REQUIRED)
find_package(onigokko REQUIRED)

add_executable(main_exec
        src/main.cpp
        )

# パッケージが追加されたらここに追記
ament_target_dependencies(main_exec
        rclcpp
        onigokko
        )

target_include_directories(main_exec
        PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:include>
        )

find_package(ament_cmake REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  # set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  # set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

install(DIRECTORY launch config
 DESTINATION share/${PROJECT_NAME})

install(TARGETS
        main_exec
        DESTINATION lib/${PROJECT_NAME}
        )

ament_package()
